@@ -39,6 +39,10 @@ importFrom(combinat,permn)
 importFrom(igraph,"vertex_attr<-")
 importFrom(igraph,graph_from_edgelist)
 importFrom(igraph,max_bipartite_match)
+importFrom(itertools,hasNext)
+importFrom(itertools,ihasNext)
+importFrom(itertools,nextElem)
+importFrom(itertools,product)
 importFrom(lhs,create_galois_field)
 importFrom(stats,addmargins)
 importFrom(stats,cor)
